<resources>
    <string-array name="drawer_nav_items_array">
        <item>Dashboard</item>
        <item>Profiles</item>
        <item>Http Client</item>
        <item>Diagnostics</item>
    </string-array>

    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="remove">Remove</string>

    <string name="app_name">SeaCat Mate</string>
    <string name="app_label">TeskaLabs SeaCat Mate</string>
    <string name="http_client_request">Request</string>
    <string name="http_client_headers">Headers</string>
    <string name="http_client_body">Body</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_reset_identity">Reset Identity</string>
    <string name="main_form_desc">Please fill the following:</string>

    <string name="string_gateway_location_label">Location of Gateway</string>
    <string name="string_gateway_name_label">Gateway Name</string>
    <string name="string_profile_name_label">Profile Name</string>
    <string name="remove_profile">Remove profile</string>
    <string name="title_activity_http_client">HttpClientActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="dashboard_profiles">Profiles</string>
    <string name="dashboard_http_client">Http Client</string>
    <string name="dashboard_diagnostics">Diagnostics</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_profiles">Profiles</string>
    <string name="title_activity_edit_profile">SeaCat Mate Profile</string>
</resources>
